# bson-generic

./: bson-generic.cabal  stack.yaml
src/Data/Bson/: Generic.hs
