name:                bson-generic
version:             0.0.8
synopsis:            Generic functionality for BSON
description:         This package offers easy conversion from and to BSON data type for most of user defined data types.
                     The interface may change at will.
license:             BSD3
license-file:        LICENSE
author:              Petr Pilař
maintainer:          the.palmik+maintainer@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >= 1.8
stability:           experimental

source-repository head
  type: git
  location: https://github.com/johnmave126/bson-generic

library
  hs-source-dirs: src

  exposed-modules:
      Data.Bson.Generic

  build-depends:
      base     >= 4.8 && < 5
    , bson     >= 0.3 && < 0.4
    , text     >= 1.2 && < 1.3
    , mtl      >= 2.2 && < 2.3

  ghc-options: -O2

